--- a/AAAMLP/c2.ipynb
+++ b/AAAMLP/c2.ipynb
@@ -3141,6 +3141,545 @@
     "    agg_df = agg_df.reset_index()\n",
     "    return agg_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "time series 时，可以在不同维度去aggregate，"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "feature_dict = {}\n",
+    "# calculate mean\n",
+    "feature_dict['mean'] = np.mean(x)\n",
+    "# calculate max\n",
+    "feature_dict['max'] = np.max(x)\n",
+    "# calculate min\n",
+    "feature_dict['min'] = np.min(x)\n",
+    "# calculate standard deviation\n",
+    "feature_dict['std'] = np.std(x)\n",
+    "# calculate variance\n",
+    "feature_dict['var'] = np.var(x)\n",
+    "# peak-to-peak\n",
+    "feature_dict['ptp'] = np.ptp(x)\n",
+    "# percentile features\n",
+    "feature_dict['percentile_10'] = np.percentile(x, 10)\n",
+    "feature_dict['percentile_60'] = np.percentile(x, 60)\n",
+    "feature_dict['percentile_90'] = np.percentile(x, 90)\n",
+    "# quantile features\n",
+    "feature_dict['quantile_5'] = np.quantile(x, 0.05)\n",
+    "feature_dict['quantile_95'] = np.quantile(x, 0.95)\n",
+    "feature_dict['quantile_99'] = np.quantile(x, 0.99)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tsfresh 是个典型的时间序列处理的包"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/frog/Code/Exercise/AAAMLP/c2.ipynb Cell 69\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y142sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtsfresh\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfeature_extraction\u001b[39;00m \u001b[39mimport\u001b[39;00m feature_calculators \u001b[39mas\u001b[39;00m fc\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y142sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# tsfresh based features\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y142sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m feature_dict[\u001b[39m'\u001b[39m\u001b[39mabs_energy\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m fc\u001b[39m.\u001b[39mabs_energy(x)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y142sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m feature_dict[\u001b[39m'\u001b[39m\u001b[39mcount_above_mean\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m fc\u001b[39m.\u001b[39mcount_above_mean(x)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y142sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m feature_dict[\u001b[39m'\u001b[39m\u001b[39mcount_below_mean\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m fc\u001b[39m.\u001b[39mcount_below_mean(x)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from tsfresh.feature_extraction import feature_calculators as fc\n",
+    "# tsfresh based features\n",
+    "feature_dict['abs_energy'] = fc.abs_energy(x)\n",
+    "feature_dict['count_above_mean'] = fc.count_above_mean(x)\n",
+    "feature_dict['count_below_mean'] = fc.count_below_mean(x)\n",
+    "feature_dict['mean_abs_change'] = fc.mean_abs_change(x)\n",
+    "feature_dict['mean_change'] = fc.mean_change(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "创建多项式feature\n",
+    "\n",
+    "polynomial features. For example, a second-degree polynomial feature from two features “a” and “b” would include: “a”, “b”, “ab”, “a2” and “b2”."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "# generate a random dataframe with\n",
+    "# 2 columns and 100 rows\n",
+    "df = pd.DataFrame(\n",
+    "np.random.rand(100, 2),\n",
+    "columns=[f\"f_{i}\" for i in range(1, 3)]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f_1</th>\n",
+       "      <th>f_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.637257</td>\n",
+       "      <td>0.784666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.262700</td>\n",
+       "      <td>0.953519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.308971</td>\n",
+       "      <td>0.335682</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.156386</td>\n",
+       "      <td>0.838713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.419812</td>\n",
+       "      <td>0.217233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>0.075711</td>\n",
+       "      <td>0.325412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>0.493460</td>\n",
+       "      <td>0.072962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>0.028927</td>\n",
+       "      <td>0.998367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>0.116803</td>\n",
+       "      <td>0.282510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>0.603384</td>\n",
+       "      <td>0.490411</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         f_1       f_2\n",
+       "0   0.637257  0.784666\n",
+       "1   0.262700  0.953519\n",
+       "2   0.308971  0.335682\n",
+       "3   0.156386  0.838713\n",
+       "4   0.419812  0.217233\n",
+       "..       ...       ...\n",
+       "95  0.075711  0.325412\n",
+       "96  0.493460  0.072962\n",
+       "97  0.028927  0.998367\n",
+       "98  0.116803  0.282510\n",
+       "99  0.603384  0.490411\n",
+       "\n",
+       "[100 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f_1</th>\n",
+       "      <th>f_2</th>\n",
+       "      <th>f_3</th>\n",
+       "      <th>f_4</th>\n",
+       "      <th>f_5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.305421</td>\n",
+       "      <td>0.533544</td>\n",
+       "      <td>0.093282</td>\n",
+       "      <td>0.162956</td>\n",
+       "      <td>0.284669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.604778</td>\n",
+       "      <td>0.738402</td>\n",
+       "      <td>0.365756</td>\n",
+       "      <td>0.446569</td>\n",
+       "      <td>0.545238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.743816</td>\n",
+       "      <td>0.468538</td>\n",
+       "      <td>0.553262</td>\n",
+       "      <td>0.348506</td>\n",
+       "      <td>0.219528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.194825</td>\n",
+       "      <td>0.901633</td>\n",
+       "      <td>0.037957</td>\n",
+       "      <td>0.175660</td>\n",
+       "      <td>0.812942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.911589</td>\n",
+       "      <td>0.424692</td>\n",
+       "      <td>0.830995</td>\n",
+       "      <td>0.387144</td>\n",
+       "      <td>0.180363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>0.356279</td>\n",
+       "      <td>0.894313</td>\n",
+       "      <td>0.126934</td>\n",
+       "      <td>0.318625</td>\n",
+       "      <td>0.799796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>0.577354</td>\n",
+       "      <td>0.985906</td>\n",
+       "      <td>0.333338</td>\n",
+       "      <td>0.569217</td>\n",
+       "      <td>0.972010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>0.369823</td>\n",
+       "      <td>0.316027</td>\n",
+       "      <td>0.136769</td>\n",
+       "      <td>0.116874</td>\n",
+       "      <td>0.099873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>0.440584</td>\n",
+       "      <td>0.894570</td>\n",
+       "      <td>0.194114</td>\n",
+       "      <td>0.394133</td>\n",
+       "      <td>0.800256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>0.168234</td>\n",
+       "      <td>0.086637</td>\n",
+       "      <td>0.028303</td>\n",
+       "      <td>0.014575</td>\n",
+       "      <td>0.007506</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         f_1       f_2       f_3       f_4       f_5\n",
+       "0   0.305421  0.533544  0.093282  0.162956  0.284669\n",
+       "1   0.604778  0.738402  0.365756  0.446569  0.545238\n",
+       "2   0.743816  0.468538  0.553262  0.348506  0.219528\n",
+       "3   0.194825  0.901633  0.037957  0.175660  0.812942\n",
+       "4   0.911589  0.424692  0.830995  0.387144  0.180363\n",
+       "..       ...       ...       ...       ...       ...\n",
+       "95  0.356279  0.894313  0.126934  0.318625  0.799796\n",
+       "96  0.577354  0.985906  0.333338  0.569217  0.972010\n",
+       "97  0.369823  0.316027  0.136769  0.116874  0.099873\n",
+       "98  0.440584  0.894570  0.194114  0.394133  0.800256\n",
+       "99  0.168234  0.086637  0.028303  0.014575  0.007506\n",
+       "\n",
+       "[100 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "# initialize polynomial features class object\n",
+    "# for two-degree polynomial features\n",
+    "pf = preprocessing.PolynomialFeatures(\n",
+    "    degree=2,\n",
+    "    interaction_only=False,\n",
+    "    include_bias=False\n",
+    ")\n",
+    "# fit to the features\n",
+    "pf.fit(df)\n",
+    "# create polynomial features\n",
+    "poly_feats = pf.transform(df)\n",
+    "# create a dataframe with all the features\n",
+    "num_feats = poly_feats.shape[1]\n",
+    "df_transformed = pd.DataFrame(\n",
+    "    poly_feats,\n",
+    "    columns=[f\"f_{i}\" for i in range(1, num_feats + 1)]\n",
+    ")\n",
+    "\n",
+    "df_transformed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "converts the numbers to categories. It’s known as binning.\n",
+    "将数字转化成类型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f_1</th>\n",
+       "      <th>f_2</th>\n",
+       "      <th>f_bin_10</th>\n",
+       "      <th>f_bin_100</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.305421</td>\n",
+       "      <td>0.533544</td>\n",
+       "      <td>3</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.604778</td>\n",
+       "      <td>0.738402</td>\n",
+       "      <td>6</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.743816</td>\n",
+       "      <td>0.468538</td>\n",
+       "      <td>7</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.194825</td>\n",
+       "      <td>0.901633</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.911589</td>\n",
+       "      <td>0.424692</td>\n",
+       "      <td>9</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>0.356279</td>\n",
+       "      <td>0.894313</td>\n",
+       "      <td>3</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>0.577354</td>\n",
+       "      <td>0.985906</td>\n",
+       "      <td>5</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>0.369823</td>\n",
+       "      <td>0.316027</td>\n",
+       "      <td>3</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>0.440584</td>\n",
+       "      <td>0.894570</td>\n",
+       "      <td>4</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>0.168234</td>\n",
+       "      <td>0.086637</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         f_1       f_2  f_bin_10  f_bin_100\n",
+       "0   0.305421  0.533544         3         31\n",
+       "1   0.604778  0.738402         6         62\n",
+       "2   0.743816  0.468538         7         76\n",
+       "3   0.194825  0.901633         1         19\n",
+       "4   0.911589  0.424692         9         94\n",
+       "..       ...       ...       ...        ...\n",
+       "95  0.356279  0.894313         3         36\n",
+       "96  0.577354  0.985906         5         59\n",
+       "97  0.369823  0.316027         3         38\n",
+       "98  0.440584  0.894570         4         45\n",
+       "99  0.168234  0.086637         1         17\n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create bins of the numerical columns\n",
+    "# 10 bins\n",
+    "df[\"f_bin_10\"] = pd.cut(df[\"f_1\"], bins=10, labels=False)\n",
+    "# 100 bins\n",
+    "df[\"f_bin_100\"] = pd.cut(df[\"f_1\"], bins=100, labels=False)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
