--- a/AAAMLP/c2.ipynb
+++ b/AAAMLP/c2.ipynb
@@ -3942,7 +3942,173 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### feature selection"
+    "### feature selection\n",
+    "删掉相关性太低的数据\n",
+    "remove features with very low variance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_selection import VarianceThreshold\n",
+    "data = ...\n",
+    "var_thresh = VarianceThreshold(threshold=0.1)\n",
+    "transformed_data = var_thresh.fit_transform(data)\n",
+    "# transformed data will have all columns with variance less\n",
+    "# than 0.1 removed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "强先关的feature也要删除，可用 Pearson correlation来选择"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['all_proxy'] = \"socks5://127.0.0.1:10808\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "HTTPError",
+     "evalue": "HTTP Error 403: Forbidden",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/frog/Code/Exercise/AAAMLP/c2.ipynb Cell 93\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y204sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdatasets\u001b[39;00m \u001b[39mimport\u001b[39;00m fetch_california_housing\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y204sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# fetch a regression dataset\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y204sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m data \u001b[39m=\u001b[39m fetch_california_housing()\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y204sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m X \u001b[39m=\u001b[39m data[\u001b[39m\"\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y204sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m col_names \u001b[39m=\u001b[39m data[\u001b[39m\"\u001b[39m\u001b[39mfeature_names\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/site-packages/sklearn/datasets/_california_housing.py:138\u001b[0m, in \u001b[0;36mfetch_california_housing\u001b[0;34m(data_home, download_if_missing, return_X_y, as_frame)\u001b[0m\n\u001b[1;32m    132\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mIOError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mData not found and `download_if_missing` is False\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    134\u001b[0m logger\u001b[39m.\u001b[39minfo(\n\u001b[1;32m    135\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mDownloading Cal. housing from \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m to \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(ARCHIVE\u001b[39m.\u001b[39murl, data_home)\n\u001b[1;32m    136\u001b[0m )\n\u001b[0;32m--> 138\u001b[0m archive_path \u001b[39m=\u001b[39m _fetch_remote(ARCHIVE, dirname\u001b[39m=\u001b[39;49mdata_home)\n\u001b[1;32m    140\u001b[0m \u001b[39mwith\u001b[39;00m tarfile\u001b[39m.\u001b[39mopen(mode\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mr:gz\u001b[39m\u001b[39m\"\u001b[39m, name\u001b[39m=\u001b[39marchive_path) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m    141\u001b[0m     cal_housing \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mloadtxt(\n\u001b[1;32m    142\u001b[0m         f\u001b[39m.\u001b[39mextractfile(\u001b[39m\"\u001b[39m\u001b[39mCaliforniaHousing/cal_housing.data\u001b[39m\u001b[39m\"\u001b[39m), delimiter\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    143\u001b[0m     )\n",
+      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/site-packages/sklearn/datasets/_base.py:1324\u001b[0m, in \u001b[0;36m_fetch_remote\u001b[0;34m(remote, dirname)\u001b[0m\n\u001b[1;32m   1302\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Helper function to download a remote dataset into path\u001b[39;00m\n\u001b[1;32m   1303\u001b[0m \n\u001b[1;32m   1304\u001b[0m \u001b[39mFetch a dataset pointed by remote's url, save into path using remote's\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1320\u001b[0m \u001b[39m    Full path of the created file.\u001b[39;00m\n\u001b[1;32m   1321\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1323\u001b[0m file_path \u001b[39m=\u001b[39m remote\u001b[39m.\u001b[39mfilename \u001b[39mif\u001b[39;00m dirname \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m join(dirname, remote\u001b[39m.\u001b[39mfilename)\n\u001b[0;32m-> 1324\u001b[0m urlretrieve(remote\u001b[39m.\u001b[39;49murl, file_path)\n\u001b[1;32m   1325\u001b[0m checksum \u001b[39m=\u001b[39m _sha256(file_path)\n\u001b[1;32m   1326\u001b[0m \u001b[39mif\u001b[39;00m remote\u001b[39m.\u001b[39mchecksum \u001b[39m!=\u001b[39m checksum:\n",
+      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:241\u001b[0m, in \u001b[0;36murlretrieve\u001b[0;34m(url, filename, reporthook, data)\u001b[0m\n\u001b[1;32m    224\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    225\u001b[0m \u001b[39mRetrieve a URL into a temporary location on disk.\u001b[39;00m\n\u001b[1;32m    226\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    237\u001b[0m \u001b[39mdata file as well as the resulting HTTPMessage object.\u001b[39;00m\n\u001b[1;32m    238\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    239\u001b[0m url_type, path \u001b[39m=\u001b[39m _splittype(url)\n\u001b[0;32m--> 241\u001b[0m \u001b[39mwith\u001b[39;00m contextlib\u001b[39m.\u001b[39mclosing(urlopen(url, data)) \u001b[39mas\u001b[39;00m fp:\n\u001b[1;32m    242\u001b[0m     headers \u001b[39m=\u001b[39m fp\u001b[39m.\u001b[39minfo()\n\u001b[1;32m    244\u001b[0m     \u001b[39m# Just return the local path and the \"headers\" for file://\u001b[39;00m\n\u001b[1;32m    245\u001b[0m     \u001b[39m# URLs. No sense in performing a copy unless requested.\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:216\u001b[0m, in \u001b[0;36murlopen\u001b[0;34m(url, data, timeout, cafile, capath, cadefault, context)\u001b[0m\n\u001b[1;32m    214\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    215\u001b[0m     opener \u001b[39m=\u001b[39m _opener\n\u001b[0;32m--> 216\u001b[0m \u001b[39mreturn\u001b[39;00m opener\u001b[39m.\u001b[39;49mopen(url, data, timeout)\n",
+      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:525\u001b[0m, in \u001b[0;36mOpenerDirector.open\u001b[0;34m(self, fullurl, data, timeout)\u001b[0m\n\u001b[1;32m    523\u001b[0m \u001b[39mfor\u001b[39;00m processor \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocess_response\u001b[39m.\u001b[39mget(protocol, []):\n\u001b[1;32m    524\u001b[0m     meth \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(processor, meth_name)\n\u001b[0;32m--> 525\u001b[0m     response \u001b[39m=\u001b[39m meth(req, response)\n\u001b[1;32m    527\u001b[0m \u001b[39mreturn\u001b[39;00m response\n",
+      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:634\u001b[0m, in \u001b[0;36mHTTPErrorProcessor.http_response\u001b[0;34m(self, request, response)\u001b[0m\n\u001b[1;32m    631\u001b[0m \u001b[39m# According to RFC 2616, \"2xx\" code indicates that the client's\u001b[39;00m\n\u001b[1;32m    632\u001b[0m \u001b[39m# request was successfully received, understood, and accepted.\u001b[39;00m\n\u001b[1;32m    633\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39m200\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m code \u001b[39m<\u001b[39m \u001b[39m300\u001b[39m):\n\u001b[0;32m--> 634\u001b[0m     response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mparent\u001b[39m.\u001b[39;49merror(\n\u001b[1;32m    635\u001b[0m         \u001b[39m'\u001b[39;49m\u001b[39mhttp\u001b[39;49m\u001b[39m'\u001b[39;49m, request, response, code, msg, hdrs)\n\u001b[1;32m    637\u001b[0m \u001b[39mreturn\u001b[39;00m response\n",
+      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:563\u001b[0m, in \u001b[0;36mOpenerDirector.error\u001b[0;34m(self, proto, *args)\u001b[0m\n\u001b[1;32m    561\u001b[0m \u001b[39mif\u001b[39;00m http_err:\n\u001b[1;32m    562\u001b[0m     args \u001b[39m=\u001b[39m (\u001b[39mdict\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mdefault\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mhttp_error_default\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m+\u001b[39m orig_args\n\u001b[0;32m--> 563\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_chain(\u001b[39m*\u001b[39;49margs)\n",
+      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:496\u001b[0m, in \u001b[0;36mOpenerDirector._call_chain\u001b[0;34m(self, chain, kind, meth_name, *args)\u001b[0m\n\u001b[1;32m    494\u001b[0m \u001b[39mfor\u001b[39;00m handler \u001b[39min\u001b[39;00m handlers:\n\u001b[1;32m    495\u001b[0m     func \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(handler, meth_name)\n\u001b[0;32m--> 496\u001b[0m     result \u001b[39m=\u001b[39m func(\u001b[39m*\u001b[39;49margs)\n\u001b[1;32m    497\u001b[0m     \u001b[39mif\u001b[39;00m result \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    498\u001b[0m         \u001b[39mreturn\u001b[39;00m result\n",
+      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:643\u001b[0m, in \u001b[0;36mHTTPDefaultErrorHandler.http_error_default\u001b[0;34m(self, req, fp, code, msg, hdrs)\u001b[0m\n\u001b[1;32m    642\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mhttp_error_default\u001b[39m(\u001b[39mself\u001b[39m, req, fp, code, msg, hdrs):\n\u001b[0;32m--> 643\u001b[0m     \u001b[39mraise\u001b[39;00m HTTPError(req\u001b[39m.\u001b[39mfull_url, code, msg, hdrs, fp)\n",
+      "\u001b[0;31mHTTPError\u001b[0m: HTTP Error 403: Forbidden"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "# fetch a regression dataset\n",
+    "data = fetch_california_housing()\n",
+    "X = data[\"data\"]\n",
+    "col_names = data[\"feature_names\"]\n",
+    "y = data[\"target\"]\n",
+    "# convert to pandas dataframe\n",
+    "df = pd.DataFrame(X, columns=col_names)\n",
+    "# introduce a highly correlated column\n",
+    "df.loc[:, \"MedInc_Sqrt\"] = df.MedInc.apply(np.sqrt)\n",
+    "# get correlation matrix (pearson)\n",
+    "df.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/frog/Code/Exercise/AAAMLP/c2.ipynb Cell 94\u001b[0m line \u001b[0;36m7\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=61'>62</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mselection\u001b[39m.\u001b[39mfit_transform(X, y)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m ufs \u001b[39m=\u001b[39m UnivariateFeatureSelction(\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m     n_features\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m     problem_type\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mregression\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m     scoring\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mf_regression\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m )\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m ufs\u001b[39m.\u001b[39mfit(X, y)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=70'>71</a>\u001b[0m X_transformed \u001b[39m=\u001b[39m ufs\u001b[39m.\u001b[39mtransform(X)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import chi2\n",
+    "from sklearn.feature_selection import f_classif\n",
+    "from sklearn.feature_selection import f_regression\n",
+    "from sklearn.feature_selection import mutual_info_classif\n",
+    "from sklearn.feature_selection import mutual_info_regression\n",
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import SelectPercentile\n",
+    "\n",
+    "class UnivariateFeatureSelction:\n",
+    "    def __init__(self, n_features, problem_type, scoring):\n",
+    "        \"\"\"\n",
+    "        Custom univariate feature selection wrapper on\n",
+    "        different univariate feature selection models from\n",
+    "        scikit-learn.\n",
+    "        :param n_features: SelectPercentile if float else SelectKBest\n",
+    "        :param problem_type: classification or regression\n",
+    "        :param scoring: scoring function, string\n",
+    "        \"\"\"\n",
+    "        # for a given problem type, there are only\n",
+    "        # a few valid scoring methods\n",
+    "        # you can extend this with your own custom\n",
+    "        # methods if you wish\n",
+    "        if problem_type == \"classification\":\n",
+    "            valid_scoring = {\n",
+    "                \"f_classif\": f_classif,\n",
+    "                \"chi2\": chi2,\n",
+    "                \"mutual_info_classif\": mutual_info_classif\n",
+    "            }\n",
+    "        else:\n",
+    "            valid_scoring = {\n",
+    "                \"f_regression\": f_regression,\n",
+    "                \"mutual_info_regression\": mutual_info_regression\n",
+    "            }\n",
+    "        # raise exception if we do not have a valid scoring method\n",
+    "        if scoring not in valid_scoring:\n",
+    "            raise Exception(\"Invalid scoring function\")\n",
+    "        # if n_features is int, we use selectkbest\n",
+    "        # if n_features is float, we use selectpercentile\n",
+    "        # please note that it is int in both cases in sklearn\n",
+    "        if isinstance(n_features, int):\n",
+    "            self.selection = SelectKBest(\n",
+    "                valid_scoring[scoring],\n",
+    "                k=n_features)\n",
+    "        elif isinstance(n_features, float):\n",
+    "            self.selection = SelectPercentile(\n",
+    "                valid_scoring[scoring],\n",
+    "                percentile=int(n_features * 100)\n",
+    "            )\n",
+    "        else:\n",
+    "            raise Exception(\"Invalid type of feature\")\n",
+    "    \n",
+    "    # same fit function\n",
+    "    def fit(self, X, y):\n",
+    "        return self.selection.fit(X, y)\n",
+    "    \n",
+    "    # same transform function\n",
+    "    def transform(self, X):\n",
+    "        return self.selection.transform(X)\n",
+    "    \n",
+    "    # same fit_transform function\n",
+    "    def fit_transform(self, X, y):\n",
+    "        return self.selection.fit_transform(X, y)\n",
+    "    \n",
+    "\n",
+    "ufs = UnivariateFeatureSelction(\n",
+    "    n_features=0.1,\n",
+    "    problem_type=\"regression\",\n",
+    "    scoring=\"f_regression\"\n",
+    ")\n",
+    "ufs.fit(X, y)\n",
+    "X_transformed = ufs.transform(X)"
    ]
   }
  ],
